[gd_scene load_steps=3 format=3 uid="uid://bis56r5mv1i41"]

[ext_resource type="Script" path="res://Click/click_map.gd" id="1_vvwft"]
[ext_resource type="PackedScene" uid="uid://ci6gd70h1oxed" path="res://Click/window.tscn" id="2_hnbts"]

[node name="click_map" type="Node2D"]
script = ExtResource("1_vvwft")
windowScene = ExtResource("2_hnbts")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
offset_left = 32.0
offset_top = 32.0
offset_right = 608.0
offset_bottom = 1048.0

[node name="ReferenceRect" type="ReferenceRect" parent="ReferenceRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 560.0
offset_bottom = 322.0

[node name="ReferenceRect2" type="ReferenceRect" parent="ReferenceRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 354.0
offset_right = 560.0
offset_bottom = 660.0

[node name="ReferenceRect3" type="ReferenceRect" parent="ReferenceRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 692.0
offset_right = 560.0
offset_bottom = 998.0

[node name="Marker0" type="Marker2D" parent="."]
position = Vector2(48, 48)

[node name="Marker1" type="Marker2D" parent="."]
position = Vector2(48, 386)

[node name="Marker2" type="Marker2D" parent="."]
position = Vector2(48, 724)

[node name="spawnTime" type="Timer" parent="."]
wait_time = 5.0

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_left = 32.0
offset_top = 32.0
offset_right = 608.0
offset_bottom = 1048.0
color = Color(0, 0, 0, 1)

[connection signal="timeout" from="spawnTime" to="." method="_on_spawn_timeout"]
